--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,10 @@ button{
     background-color: green;
     border: transparent;
     border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #danielle{
     border-radius: 50%;
